--- a/side-navigation.css
+++ b/side-navigation.css
@@ -31,7 +31,7 @@ body {
 
 .m-side-navigation.-close .m-side-navigation__header__trigger.-open {
     position: relative;
-    left: -3.5rem;
+    left: -3.75rem;
 }
 
 .m-side-navigation.-open .m-side-navigation__header__trigger.-open {
@@ -53,7 +53,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 0.75rem;
+    padding: 0 0 0 0.75rem;
 }
 
 .m-side-navigation.-close .m-side-navigation__header:hover {
@@ -67,8 +67,17 @@ body {
 .m-side-navigation__header__label {
     font-size: 1rem;
     font-weight: 900;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: sans-serif;
     color: #fff;
+}
+
+/*********/
+.-selected {
+    background-color: #007bc0;
+}
+
+.m-side-navigation__menuItem.-selected:hover {
+    background-color: #0096e8;
 }
 
 /*********/
@@ -82,21 +91,38 @@ li {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 1rem;
+    font-family: sans-serif;
+}
+
 .m-side-navigation__menuItems {
     margin: 1.5rem 0;
 }
-
-.m-side-navigation__menuItem {
+/*side navigation closed*/
+.m-side-navigation.-close .m-side-navigation__menuItem {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 3rem;
 }
 
-.m-side-navigation__menuItem:hover {
-    background-color: #595e62;
-}
-
 .m-side-navigation.-close .m-side-navigation__menuItem span {
     display: none;
+}
+/*side navigation opened*/
+.m-side-navigation.-open .m-side-navigation__menuItem {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+li > span {
+
+}
+
+.m-side-navigation__menuItem:hover {
+    background-color: #595e62;
 }
