set a element as button with selected state

--- a/side-navigation.css
+++ b/side-navigation.css
@@ -96,6 +96,7 @@ a {
     color: #fff;
     font-size: 1rem;
     font-family: sans-serif;
+    cursor: pointer;
 }
 
 .m-side-navigation__menuItems {
