--- a/side-navigation.css
+++ b/side-navigation.css
@@ -1,4 +1,4 @@
-body {
+.m-side-navigation__body {
     padding: 0;
     margin: 0;
     display: flex;
@@ -25,7 +25,7 @@ body {
 
 .m-side-navigation.-open {
     height: 100vh;
-    width: 100vw;
+    width: 25vw;
     background-color: #2e3033;
 }
 
