--- a/checkbox.css
+++ b/checkbox.css
@@ -21,7 +21,7 @@
 }
 
 .a-checkbox input[type="checkbox"]:checked {
-    background-color: #00a4fd;
+    background-color: #24AD4E;
 }
 
 .a-checkbox label {
