--- a/main.css
+++ b/main.css
@@ -11,12 +11,14 @@
 body {
     display: grid;
     grid-template-columns: minmax(3rem, auto) 1fr;
+    grid-template-rows: 3.25rem 1fr minmax(2rem,auto);
     grid-template-areas: 
         "nav header"
         "nav content"
         "nav footer";
     margin: 0;
-    padding: 0;    
+    padding: 0;
+    min-height: 100vh;
 }
 
 .-grid__side-nav {
@@ -27,10 +29,15 @@ body {
     grid-area: header;
 }
 
-.content {
+.-grid__content.twelve-col {
     grid-area: content;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    column-gap: 2rem;
 }
 
-.footer {
+.-grid__footer {
     grid-area: footer;
+    border-top: 1px solid #8a9097;
+    margin-top: 1rem;
 }
