--- a/main.css
+++ b/main.css
@@ -1,17 +1,42 @@
 :root {
-    --green-50: #24AD4E;
-    --green-40: #69FF96;
-    --green-30: #4DFA80;
+    --green-10: #4dfa80;
+    --green-20: #3fde6e;
+    --green-30: #39d366;
+    --green-40: #33c85f;
+    --green-50: #30c25c;
+    --green-60: #2dbd58;
+    --green-70: #2ab855;
+    --green-80: #27b251;
+    --green-90: #24ad4e;
+
+    --blue-10: #5cb9f2;
+    --blue-20: #50b3f1;
+    --blue-30: #44adf0;
+    --blue-40: #36a7ee;
+    --blue-50: #26a1ed;
+
+    --orange-40: #F2AB49;
+    --orange-50: #ED9A26;
 
     --red-50: #AD1413;
     --red-40: #FA3737;
     --red-30: #FA4F4D;
+
+    --grey-10: #ffffff;
+    --grey-20: #eaeaea;
+    --grey-30: #d6d6d6;
+    --grey-40: #c2c2c2;
+    --grey-50: #afafaf;
+    --grey-60: #9c9c9c;
+    --grey-70: #777777;
+    --grey-80: #545454;
+    --grey-90: #333333;
 }
 
 body {
     display: grid;
     grid-template-columns: minmax(3rem, auto) 1fr;
-    grid-template-rows: 3.25rem 1fr minmax(2rem,auto);
+    grid-template-rows: 4.25rem 1fr minmax(2rem,auto);
     grid-template-areas: 
         "nav header"
         "nav content"
@@ -34,6 +59,15 @@ body {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     column-gap: 2rem;
+    padding: 0 2rem;
+}
+
+.-grid__content.twelve-col button:nth-child(1) {
+    grid-column: 1 / 3;
+}
+
+.-grid__content.twelve-col button:nth-child(2) {
+    grid-column: 3 / 5;
 }
 
 .-grid__footer {
