added link to color generator

--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/*https://color.adobe.com/create/color-wheel*/
+/*https://colordesigner.io/gradient-generator*/
 :root {
     --green-10: #4dfa80;
     --green-20: #3fde6e;
