--- a/main.css
+++ b/main.css
@@ -36,6 +36,7 @@
 }
 
 body {
+    font-family: sans-serif;
     display: grid;
     grid-template-columns: minmax(3rem, auto) 1fr;
     grid-template-rows: 4.25rem 1fr minmax(2rem,auto);
@@ -45,7 +46,7 @@ body {
         "nav footer";
     margin: 0;
     padding: 0;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .-grid__side-nav {
@@ -62,14 +63,19 @@ body {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 2rem;
     padding: 0 2rem;
+    overflow: hidden;
 }
 
-.-grid__content.twelve-col button:nth-child(1) {
-    grid-column: 1 / 3;
+.content-section__main {
+    overflow-y: scroll;
+    grid-column: 1 / 11;
 }
 
-.-grid__content.twelve-col button:nth-child(2) {
-    grid-column: 3 / 5;
+.content-section__action {
+    grid-column: 11 / 13;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .-grid__footer {
