added margin top and bottom to chip

--- a/chip.css
+++ b/chip.css
@@ -4,7 +4,7 @@
     width: fit-content;
     border-radius: 5rem;
     background-color: #eaeaea;
-    margin: 0 0.125rem;
+    margin: 0.125rem 0.125rem;
 }
 
 ul.list-for__a-chip {
