--- a/button.css
+++ b/button.css
@@ -54,16 +54,37 @@
 
 
 /* Button--Tertiary */
-.a-button--tertiary {
+.a-button.-tertiary {
     background-color: transparent;
     color: var(--primary-button-color);
 }
 
-.a-button--tertiary:hover {
+.a-button.-tertiary:hover {
     background-color: var(--primary-button-color__hover);
 }
 
-.a-button--tertiary:active {
+.a-button.-tertiary:active {
     background-color: var(--primary-button-color__active);
     color: white;
+}
+
+.a-button.-withIcon {
+    font-size: 1rem;
+    height: fit-content;
+    color: #000;
+    padding: 0.75rem;
+}
+
+.a-button.-withIcon:hover {
+    height: fit-content;
+    color: #26a1ed;
+    border-radius: 1.5rem;
+    background-color: rgba(38, 161, 237, 0.1);
+}
+
+.a-button.-withIcon:active {
+    height: fit-content;
+    color: #0b5b8e;
+    border-radius: 1.5rem;
+    background-color: rgba(38, 161, 237, 0.5);
 }
