--- a/table.css
+++ b/table.css
@@ -25,3 +25,7 @@ td, th {
 .m-table tr {
     border-bottom: 1px solid #afafaf;
 }
+
+.m-table tr:nth-of-type(even) {
+    background-color: #f7f7f7;
+}
