--- a/acss-components/table.css
+++ b/acss-components/table.css
@@ -29,3 +29,35 @@ td, th {
 .m-table tr:nth-of-type(even) {
     background-color: #f7f7f7;
 }
+
+.m-table thead tr > th:nth-child(1):hover {
+    color: #26a1ed;
+    cursor: pointer;
+}
+
+.m-table thead tr > th:nth-child(1) > div {
+    display: flex;
+    align-items: center;
+}
+
+.m-table thead tr > th:nth-child(1) > div > p {
+    margin-right: 0.25rem;
+}
+
+.m-table thead tr > th:nth-child(1).-sorted__AtoZ > div > i:nth-of-type(2) {
+    display: none;
+}
+
+.m-table thead tr > th:nth-child(1).-sorted__ZtoA > div > i:nth-of-type(1) {
+    display: none;
+}
+
+.m-table thead tr > th:nth-child(1).-sorted__AtoZ {
+    color: #26a1ed;
+    cursor: pointer;
+}
+
+.m-table thead tr > th:nth-child(1).-sorted__ZtoA {
+    color: #26a1ed;
+    cursor: pointer;
+}
