--- a/acss-components/button.css
+++ b/acss-components/button.css
@@ -13,7 +13,7 @@
     border: none;
     cursor: pointer;
     height: 3rem;
-    width: auto;
+    width: 100%;
 }
 
 .a-button__label {
@@ -71,7 +71,7 @@
 .a-button.-withIcon {
     font-size: 1rem;
     height: fit-content;
-    color: #000;
+    color: #333333;
     padding: 0.75rem;
 }
 
