changed checked color state

--- a/acss-components/checkbox.css
+++ b/acss-components/checkbox.css
@@ -21,7 +21,7 @@
 }
 
 .a-checkbox input[type="checkbox"]:checked {
-    background-color: #44adf0;
+    background-color: #0b5b8e;
 }
 
 .a-checkbox label {
