--- a/acss-components/button.css
+++ b/acss-components/button.css
@@ -12,13 +12,13 @@
     padding: 0;
     border: none;
     cursor: pointer;
-    height: 3rem;
+    height: 2.5rem;
     width: 100%;
 }
 
 .a-button__label {
     margin: auto;
-    padding: 1rem 1rem;
+    padding: auto;
 }
 
 .a-button.-primary {
@@ -69,7 +69,7 @@
 }
 
 .a-button.-withIcon {
-    font-size: 1rem;
+    font-size: 0.875rem;
     height: fit-content;
     color: #333333;
     padding: 0.75rem;
