--- a/person.css
+++ b/person.css
@@ -29,7 +29,7 @@
 .section__cards {
     grid-column: 1;
     border-right: 1px solid #9c9c9c;
-    background-color: #fff;
+    background-color: #f9fcfe;
     overflow-y: auto;
 }
 
@@ -96,23 +96,25 @@
 }
 
 .m-persona-card {
-    grid-column: 1 / 3;
+    grid-column: 1 / 1;
     height: auto;
-    margin: 0.5rem 0;
+    margin: 0.25rem 0;
     transition: transform 250ms;
-    box-shadow:
-        1.4px 2px 2.2px rgba(0, 0, 0, 0.02),
-        3.5px 4.9px 5.3px rgba(0, 0, 0, 0.028),
-        6.5px 9.3px 10px rgba(0, 0, 0, 0.035),
-        11.6px 16.5px 17.9px rgba(0, 0, 0, 0.042),
-        21.7px 30.9px 33.4px rgba(0, 0, 0, 0.05),
-        52px 74px 80px rgba(0, 0, 0, 0.07);
     border-radius: 4px;
-    border: 1px solid #c2c2c2;
+    box-shadow:
+  0px 0.8px 2.2px rgba(0, 0, 0, 0.006),
+  0px 2px 5.3px rgba(0, 0, 0, 0.008),
+  0px 3.8px 10px rgba(0, 0, 0, 0.01),
+  0px 6.7px 17.9px rgba(0, 0, 0, 0.012),
+  0px 12.5px 33.4px rgba(0, 0, 0, 0.014),
+  0px 30px 80px rgba(0, 0, 0, 0.02)
+;
+
+
 }
 
 .m-persona-card .persona-card__content {
-    padding: 0 1.5rem 1rem 1.5rem;
+    padding: 0 0.75rem 0 0.75rem;
 }
 
 /*.m-persona-card:nth-child(2n) {
@@ -120,7 +122,7 @@
 }*/
 
 .m-persona-card {
-    background-color: transparent;
+    background-color: #fff;
 }
 
 /*.m-persona-card:nth-child(3n+4) {
@@ -137,7 +139,7 @@
 }*/
 
 .m-persona-card:hover {
-    border: 1px solid #26a1ed;
+    border: 2px solid #26a1ed;
 }
 
 /*.m-persona-card:hover:nth-child(3n+4) {
@@ -149,7 +151,9 @@
 }*/
 
 .m-persona-card:active {
-    border: 1px solid #0b5b8e;
+    border: 2px solid #0b5b8e;
+    background-color: rgba(38, 161, 237, 0.5);
+    color: #fff;
 }
 
 /*.m-persona-card:active:nth-child(3n+4) {
@@ -158,7 +162,7 @@
 
 
 .divider {
-    border-bottom: 1px solid #c2c2c2;
+    /*border-bottom: 1px solid #c2c2c2;*/
 }
 
 .material-icons {
@@ -169,20 +173,35 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-right: 1.5rem;
+    padding-right: 0.75rem;
 }
 
 .persona-card__title > p {
-    font-weight: 500;
-    padding-left: 1.5rem;
+    font-size: 0.875rem;
+    padding-left: 0.75rem;
+    margin-top: 0.75rem;
 }
 
 .person-card__description {
-    font-size: 0.875rem;
-    font-weight: 400;
+    font-size: 0.75rem;
+}
+
+.person-card__description > p {
+    margin: 0;
+    margin-bottom: 0.75rem;
 }
 
 .persona-card__checkbox {
     display: flex;
     justify-content: flex-end;
+}
+
+.m-persona-card.-selected {
+    border: 2px solid #0b5b8e;
+    background-color: rgba(38, 161, 237, 0.5);
+    color: #fff;
+}
+
+.m-persona-card:first-of-type {
+    margin-top: 1rem;
 }
