--- a/person.css
+++ b/person.css
@@ -8,7 +8,38 @@
     --color-3_03: rgba(232, 255, 254, 0.2);
     --color-4: #F1F1FE;
     --color-4_04: rgba(241, 241, 254, 0.2);
+
+    --color-m1: #19686A;
+    --color-m2: #A8EFF0;
+    --color-m3: #002021;
+
+    --color-n1: #FF3A41;
 }
+
+/*Notification*/
+.a-notification {
+    width: fit-content;
+    color: #fff;
+    background-color: var(--color-n1);
+    border-radius: 4px;
+    padding: 0.75rem;
+}
+
+.a-notification div {
+    display: flex;
+    align-items: center;
+}
+
+div#a-notification__icon {
+    border-radius: 100%;
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 0.25rem;
+} 
+
+.a-notification div > span {
+    color: #fff;
+}
+/**/
 
 .-grid__main-content {
     display: grid;
